number o' epochs