@@ -7,15 +7,15 @@
 package com.salesforce.apollo.ethereal;
 
 import com.google.protobuf.ByteString;
-import com.salesforce.apollo.ethereal.proto.Gossip;
-import com.salesforce.apollo.ethereal.proto.Missing;
-import com.salesforce.apollo.ethereal.proto.Update;
 import com.salesforce.apollo.cryptography.Digest;
 import com.salesforce.apollo.ethereal.Dag.DagImpl;
 import com.salesforce.apollo.ethereal.EpochProofBuilder.epochProofImpl;
 import com.salesforce.apollo.ethereal.EpochProofBuilder.sharesDB;
 import com.salesforce.apollo.ethereal.linear.Extender;
 import com.salesforce.apollo.ethereal.linear.TimingRound;
+import com.salesforce.apollo.ethereal.proto.Gossip;
+import com.salesforce.apollo.ethereal.proto.Missing;
+import com.salesforce.apollo.ethereal.proto.Update;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -32,26 +32,27 @@ import java.util.function.Consumer;
  */
 public class Ethereal {
 
-    private static final Logger               log          = LoggerFactory.getLogger(Ethereal.class);
-    private final        Config               config;
-    private final        ThreadPoolExecutor   consumer;
-    private final        Creator              creator;
-    private final        AtomicInteger        currentEpoch = new AtomicInteger(-1);
-    private final        Map<Integer, epoch>  epochs       = new ConcurrentHashMap<>();
-    private final        Set<Digest>          failed       = new ConcurrentSkipListSet<>();
-    private final        Queue<Unit>          lastTiming;
-    private final        int                  maxSerializedSize;
-    private final        Consumer<Integer>    newEpochAction;
-    private final        AtomicBoolean        started      = new AtomicBoolean();
-    private final        Consumer<List<Unit>> toPreblock;
+    private static final Logger                          log          = LoggerFactory.getLogger(Ethereal.class);
+    private final        Config                          config;
+    private final        ThreadPoolExecutor              consumer;
+    private final        Creator                         creator;
+    private final        AtomicInteger                   currentEpoch = new AtomicInteger(-1);
+    private final        Map<Integer, epoch>             epochs       = new ConcurrentHashMap<>();
+    private final        Set<Digest>                     failed       = new ConcurrentSkipListSet<>();
+    private final        Queue<Unit>                     lastTiming;
+    private final        int                             maxSerializedSize;
+    private final        Consumer<Integer>               newEpochAction;
+    private final        AtomicBoolean                   started      = new AtomicBoolean();
+    private final        BiConsumer<Integer, List<Unit>> toPreblock;
+    private              int                             numberOfEpochs;
 
     public Ethereal(Config config, int maxSerializedSize, DataSource ds, BiConsumer<List<ByteString>, Boolean> blocker,
                     Consumer<Integer> newEpochAction, String label) {
-        this(config, maxSerializedSize, ds, blocker(blocker, config), newEpochAction, label);
+        this(label, config, maxSerializedSize, ds, blocker(blocker, config), newEpochAction);
     }
 
-    public Ethereal(Config conf, int maxSerializedSize, DataSource ds, Consumer<List<Unit>> toPreblock,
-                    Consumer<Integer> newEpochAction, String label) {
+    public Ethereal(String label, Config conf, int maxSerializedSize, DataSource ds,
+                    BiConsumer<Integer, List<Unit>> toPreblock, Consumer<Integer> newEpochAction) {
         if (!Dag.validate(conf.nProc())) {
             throw new IllegalArgumentException("Invalid # of processes, unable to build quorum: " + conf.nProc());
         }
@@ -61,6 +62,7 @@ public class Ethereal {
         this.newEpochAction = newEpochAction;
         this.maxSerializedSize = maxSerializedSize;
         this.consumer = consumer(label);
+        numberOfEpochs = config.numberOfEpochs();
 
         creator = new Creator(config, ds, lastTiming, u -> {
             assert u.creator() == config.pid();
@@ -72,7 +74,7 @@ public class Ethereal {
     private static ThreadPoolExecutor consumer(String label) {
         return new ThreadPoolExecutor(1, 1, 1, TimeUnit.SECONDS, new PriorityBlockingQueue<>(),
                                       Thread.ofVirtual().name("Ethereal Consumer[" + label + "]").factory(),
-                                      (r, t) -> log.trace("Shutdown, cannot consume unit", t));
+                                      (r, t) -> log.trace("Shutdown, cannot consume unit"));
     }
 
     /**
@@ -90,20 +92,20 @@ public class Ethereal {
         return data.isEmpty() ? null : data;
     }
 
-    private static Consumer<List<Unit>> blocker(BiConsumer<List<ByteString>, Boolean> blocker, Config config) {
-        return units -> {
-            var print = log.isTraceEnabled() ? units.stream().map(e -> e.shortString()).toList() : null;
+    private static BiConsumer<Integer, List<Unit>> blocker(BiConsumer<List<ByteString>, Boolean> blocker,
+                                                           Config config) {
+        return (numberOfEpochs, units) -> {
+            var print = log.isTraceEnabled() ? units.stream().map(PreUnit::shortString).toList() : null;
             log.trace("Make pre block: {} on: {}", print, config.logLabel());
             List<ByteString> preBlock = toList(units);
-            var timingUnit = units.get(units.size() - 1);
+            var timingUnit = units.getLast();
             var last = false;
-            if (timingUnit.level() == config.lastLevel() && timingUnit.epoch() == config.numberOfEpochs() - 1) {
+            if (timingUnit.level() == config.lastLevel() && timingUnit.epoch() == numberOfEpochs - 1) {
                 log.debug("Closing at last level: {} at epoch: {} on: {}", timingUnit.level(), timingUnit.epoch(),
                           config.logLabel());
                 last = true;
             }
             if (preBlock != null) {
-
                 log.trace("Emitting last: {} pre block: {} on: {}", last, print, config.logLabel());
                 try {
                     blocker.accept(preBlock, last);
@@ -127,6 +129,10 @@ public class Ethereal {
         });
         builder.append("****************************").append('\n').append('\n');
         return builder.toString();
+    }
+
+    public void haltNextEpoch() {
+        numberOfEpochs = currentEpoch.get() + 1;
     }
 
     public Processor processor() {
@@ -212,7 +218,7 @@ public class Ethereal {
         log.trace("Stopping Ethereal on: {}", config.logLabel());
         consumer.getQueue().clear(); // Flush any pending consumers
         creator.stop();
-        epochs.values().forEach(e -> e.close());
+        epochs.values().forEach(epoch::close);
         epochs.clear();
         failed.clear();
         lastTiming.clear();
@@ -282,7 +288,7 @@ public class Ethereal {
     private Consumer<List<Unit>> handleTimingRounds() {
         AtomicInteger current = new AtomicInteger(0);
         return round -> {
-            var timingUnit = round.get(round.size() - 1);
+            var timingUnit = round.getLast();
             var epoch = timingUnit.epoch();
 
             if (timingUnit.level() >= config.lastLevel()) {
@@ -291,7 +297,7 @@ public class Ethereal {
                 finishEpoch(epoch);
             }
             if (epoch >= current.get() && timingUnit.level() <= config.lastLevel()) {
-                toPreblock.accept(round);
+                toPreblock.accept(numberOfEpochs, round);
                 log.trace("Preblock produced: {} on: {}", timingUnit, config.logLabel());
             }
             current.set(epoch);
@@ -323,7 +329,7 @@ public class Ethereal {
      * it.
      */
     private epoch newEpoch(int epoch) {
-        if (epoch >= config.numberOfEpochs()) {
+        if (epoch >= numberOfEpochs) {
             log.trace("Finished, beyond last epoch: {} on: {}", epoch, config.logLabel());
             return null;
         }
@@ -411,11 +417,11 @@ public class Ethereal {
         @Override
         public int compareTo(UnitTask o) {
             var comp = Integer.compare(unit.epoch(), o.unit.epoch());
-            if (comp < 0 || comp > 0) {
+            if (comp != 0) {
                 return comp;
             }
             comp = Integer.compare(unit.height(), o.unit.height());
-            if (comp < 0 || comp > 0) {
+            if (comp != 0) {
                 return comp;
             }
             return Integer.compare(unit.creator(), o.unit.creator());
